@@ -1,7 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.611 2006/03/05 04:25:04 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.612 2006/03/05 22:42:40 codeman Exp $
+
+  5 Mar 2006; Preston Cody <codeman@gentoo.org>
+  add error catching and text to saving profile dialogs
 
   4 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
